fix interceptor initialization

--- a/deploy/k8s/templates/deployment.yaml
+++ b/deploy/k8s/templates/deployment.yaml
@@ -31,5 +31,8 @@ spec:
             - name: https
               containerPort: 8443
               protocol: TCP
+            - name: grpc
+              containerPort: 9443
+              protocol: tcp
           resources:
 {{ toYaml .Values.resources | indent 12 }}
