--- a/deploy/k8s/templates/service.yaml
+++ b/deploy/k8s/templates/service.yaml
@@ -11,8 +11,12 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 443
+    - port: 8443
       targetPort: https
+      protocol: TCP
+      name: https
+    - port: 9443
+      targetPort: grpc
       protocol: TCP
       name: https
   selector:
