--- a/deploy/k8s/templates/httpproxy.yaml
+++ b/deploy/k8s/templates/httpproxy.yaml
@@ -1,19 +1,21 @@
 apiVersion: projectcontour.io/v1
 kind: HTTPProxy
 metadata:
-  name: kitchen-wizard
+  name: api
   namespace: {{ .Values.namespace }}
   labels:
     app: {{ template "kitchen-wizard.name" . }}
     chart: {{ template "kitchen-wizard.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+  annotations:
+    kubernetes.io/ingress.class: contour
 spec:
   virtualhost:
-    fqdn: kitchen-wizard.domain.migs.com
+    fqdn: api.kitchen-wizard.com
   routes:
     - conditions:
       - prefix: /
       services:
-        - name: {{ template "kitchen-wizard.fullname" . }}
-          port: 443
+        - name: api
+          port: 8443
