--- a/deploy/k8s/templates/httpproxy.yaml
+++ b/deploy/k8s/templates/httpproxy.yaml
@@ -12,7 +12,7 @@ metadata:
     kubernetes.io/ingress.class: contour
 spec:
   virtualhost:
-    fqdn: api.kitchen-wizard.com
+    fqdn: {{ .Values.apiURL }}
   routes:
     - conditions:
       - prefix: /
