--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -17,4 +17,4 @@ plugins:
     out: .
     opt: paths=source_relative
   - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.7.2-1
-    out: swagger/
+    out: swagger-ui/
