--- a/deploy/k8s/templates/deployment.yaml
+++ b/deploy/k8s/templates/deployment.yaml
@@ -31,10 +31,10 @@ spec:
           - --oidc-client-id=example-app 
           - --oidc-client-secret=ZXhhbXBsZS1hcHAtc2VjcmV0
           - --oidc-redirect-url=http://api.kitchen-wizard.local.uzcatm-skylab.com
-          - --postgres-db-hostname={{ .Values.dbHostname}}
+          - --postgres-db-hostname={{ .Values.dbHostname }}
           - --postgres-db-port={{ .Values.dbPort}}
           - --postgres-db-username={{ .Values.dbUsername }}
-          - --postgres-db-password={ .Values.dbPassword}}
+          - --postgres-db-password={{ .Values.dbPassword }} # this is ok because it is a local instance for development purposes
           {{ end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
