--- a/deploy/k8s/templates/dex/dex.yaml
+++ b/deploy/k8s/templates/dex/dex.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       serviceAccountName: dex # This is created below
       containers:
-      - image: ghcr.io/dexidp/dex:v2.30.0
+      - image: ghcr.io/dexidp/dex:v2.36.0
         name: dex
         command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
 
@@ -76,8 +76,7 @@ data:
       https: 0.0.0.0:5556
       tlsCert: /etc/dex/tls/tls.crt
       tlsKey: /etc/dex/tls/tls.key
-    oauth2:
-      skipApprovalScreen: true
+      allowedOrigins: ["*"]
 
     connectors:
       - type: linkedin
