--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,9 @@ FROM node:18.5.0-slim as builder
 # set working directory
 WORKDIR /app
 
+# pre-warm dependencies
+RUN npm install react-scripts@3.4.1 -g --silent
+
 # add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
 
@@ -10,7 +13,6 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
 
 # add app
 COPY . ./
