--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,28 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false,
+    "child_process": false
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "latest",
+    "bootstrap": "^5.2.3",
+    "fs": "^0.0.1-security",
+    "history": "^5.3.0",
+    "open": "^9.0.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-router": "^5.3.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
